--- a/sdks/python/test-suites/dataflow/common.gradle
+++ b/sdks/python/test-suites/dataflow/common.gradle
@@ -171,7 +171,7 @@ task validatesRunnerStreamingTests {
   // Execute tests with xdists
   doFirst {
     def argMap = [
-                "test_opts": basicPytestOpts + ["--numprocesses=8"]
+                "test_opts": basicPytestOpts + ["--numprocesses=8"],
                 "streaming": "true",
                 "sdk_location": files(configurations.distTarBall.files).singleFile,
                 "worker_jar": dataflowWorkerJar,
