LISAMZA-21108: Exclude log4j from sdks-java-harness uber jar
Symptom: logs are not properly working
Root Casuse: Conflict dependency in beam-sdks-java-harness uber jar and log4j-slf4j-impl
Changes: Exclude log4j from beam-sdks-java-harness uber jar
Tests: mint build, examined the built beam-sdks-java-harness.jar no longer contains org.apache.logging

RB=2593058

--- a/sdks/java/harness/build.gradle
+++ b/sdks/java/harness/build.gradle
@@ -44,6 +44,9 @@ applyJavaNature(
       }
       // Include all dependencies and transitive dependencies
       include(dependency(".*:.*"))
+      // li_trunk only
+      // LISAMZA-21108 exclude log4j from the uber jar
+      exclude(dependency("org.apache.logging.log4j:.*"))
     }
   })
 
