[BEAM-3713] Move PostCommitPython from nose to pytest

--- a/sdks/python/pytest.ini
+++ b/sdks/python/pytest.ini
@@ -27,6 +27,7 @@ python_functions =
 python_files = test_*.py *_test.py *_test_py3*.py *_test_it.py
 
 markers =
+    it_postcommit: collect for post-commit integration test runs
     it_validatescontainer: collect for ValidatesContainer integration test runs
     # Tests using this marker conflict with the xdist plugin in some way, such
     # as enabling save_main_session.
