--- a/gradle.properties
+++ b/gradle.properties
@@ -22,8 +22,8 @@ org.gradle.jvmargs=-Xss10240k
 offlineRepositoryRoot=offline-repository
 signing.gnupg.executable=gpg
 signing.gnupg.useLegacyGpg=true
-
-version=2.21.0-lyft202105181621356591
+#version=2.21.0-lyft202105181621357000
+version=2.21.0-lyft202105181621357000
 sdk_version=2.21.0
 
 javaVersion=1.8
