--- a/runners/samza/build.gradle
+++ b/runners/samza/build.gradle
@@ -65,6 +65,7 @@ dependencies {
   compile "org.apache.samza:samza-yarn_2.11:$samza_version"
   runtimeOnly "org.apache.kafka:kafka-clients:2.0.1"
   compile library.java.vendored_grpc_1_36_0
+  compile project(path: ":model:fn-execution", configuration: "shadow")
   compile project(path: ":model:job-management", configuration: "shadow")
   compile project(path: ":model:pipeline", configuration: "shadow")
   compile project(":sdks:java:fn-execution")
