--- a/sdks/java/io/debezium/build.gradle
+++ b/sdks/java/io/debezium/build.gradle
@@ -56,11 +56,11 @@ dependencies {
     // Debezium dependencies
     def debezium_version = '1.3.1.Final'
     compile group: 'io.debezium', name: 'debezium-core', version: debezium_version
-    compile group: 'io.debezium', name: 'debezium-connector-mysql', version: debezium_version
-    compile group: 'io.debezium', name: 'debezium-connector-postgres', version: debezium_version
-    compile group: 'io.debezium', name: 'debezium-connector-sqlserver', version: debezium_version
-    compile group: 'io.debezium', name: 'debezium-connector-oracle', version: debezium_version
-    compile group: 'io.debezium', name: 'debezium-connector-db2', version: debezium_version
+    runtimeOnly group: 'io.debezium', name: 'debezium-connector-mysql', version: debezium_version
+    runtimeOnly group: 'io.debezium', name: 'debezium-connector-postgres', version: debezium_version
+    runtimeOnly group: 'io.debezium', name: 'debezium-connector-sqlserver', version: debezium_version
+    runtimeOnly group: 'io.debezium', name: 'debezium-connector-oracle', version: debezium_version
+    runtimeOnly group: 'io.debezium', name: 'debezium-connector-db2', version: debezium_version
     testCompile group: 'io.debezium', name: 'debezium-connector-mysql', version: debezium_version
 }
 
