--- a/sdks/java/io/google-cloud-platform/build.gradle
+++ b/sdks/java/io/google-cloud-platform/build.gradle
@@ -120,6 +120,8 @@ dependencies {
   compile library.java.slf4j_api
   compile library.java.vendored_grpc_1_26_0
   compile library.java.vendored_guava_26_0_jre
+  compile "org.apache.arrow:arrow-memory-core:4.0.0"
+  compile "org.apache.arrow:arrow-vector:4.0.0"
 
   compile "org.threeten:threetenbp:1.4.4"
 
