turn off canonifyURLs, which is breaking functionality in dev

--- a/website/www/site/config.toml
+++ b/website/www/site/config.toml
@@ -39,7 +39,7 @@ pygmentsStyle = "tango"
 
 summaryLength = "30"
 
-canonifyURLs = true
+canonifyURLs = false
 
 [markup.goldmark.renderer]
 unsafe= true
