--- a/sdks/java/extensions/sql/build.gradle
+++ b/sdks/java/extensions/sql/build.gradle
@@ -212,6 +212,11 @@ task postCommit {
   dependsOn integrationTest
 }
 
+task emptyJar(type: Jar) {
+  archiveBaseName = "${project.archivesBaseName}-empty-jar"
+  from fileTree(dir: getTemporaryDir().createNewFile().toString())
+}
+
 task hadoopVersionsTest(group: "Verification") {
   description = "Runs SQL tests with different Hadoop versions"
   def taskNames = hadoopVersions.keySet().stream()
@@ -225,12 +230,12 @@ hadoopVersions.each { kv ->
     description = "Runs SQL tests with Hadoop version $kv.value"
     classpath = configurations."hadoopVersion$kv.key" + sourceSets.test.runtimeClasspath
     include '**/*Test.class'
+    dependsOn emptyJar
+    // Pass jars used by Java UDF tests via system properties.
+    evaluationDependsOn(":sdks:java:extensions:sql:udf-test-provider") // Needed to resolve jarPath.
+    systemProperty "beam.sql.udf.test.jar_path", project(":sdks:java:extensions:sql:udf-test-provider").jarPath
+    systemProperty "beam.sql.udf.test.empty_jar_path", emptyJar.archivePath
   }
-}
-
-task emptyJar(type: Jar) {
-  archiveBaseName = "${project.archivesBaseName}-empty-jar"
-  from fileTree(dir: getTemporaryDir().createNewFile().toString())
 }
 
 test {
