--- a/gradle.properties
+++ b/gradle.properties
@@ -24,8 +24,8 @@ offlineRepositoryRoot=offline-repository
 signing.gnupg.executable=gpg
 signing.gnupg.useLegacyGpg=true
 
-version=2.30.0-SNAPSHOT
-sdk_version=2.30.0.dev
+version=2.30.0
+sdk_version=2.30.0
 
 javaVersion=1.8
 
