--- a/.github/workflows/java_tests.yml
+++ b/.github/workflows/java_tests.yml
@@ -119,7 +119,7 @@ jobs:
         if: always()
         run: echo $jobstatus
         env:
-          jobstatus: ${{ jobs.status }}
+          jobstatus: ${{ job.status }}
           corestatus: steps.java_core_test.outputs.status
           harnessstatus: steps.java_harness_test.outputs.status
           runersstatus: steps.java_runners_test.outputs.status
