--- a/.github/workflows/java_tests.yml
+++ b/.github/workflows/java_tests.yml
@@ -24,7 +24,7 @@ on:
     inputs:
       runDataflow:
         description: 'Type "true" if you want to run Dataflow tests (GCP variables must be configured, check CI.md)'
-        default: false
+        default: true
   schedule:
     - cron: '10 2 * * *'
   push:
@@ -34,8 +34,8 @@ on:
     branches: ['master', 'release-*']
     tags: 'v*'
     paths: ['sdks/java/**', 'model/**', 'runners/**', 'examples/java/**',
-            'examples/kotlin/**', 'release/**', 'buildSrc/**']
-
+            'examples/kotlin/**', 'release/**', 'buildSrc/**', '.github/**']
+# TODO(BEAM-12104) Remove .github/** Just for testing
 
 jobs:
 
@@ -139,16 +139,16 @@ jobs:
       - check_gcp_variables
     runs-on: ${{ matrix.os }}
     if: |
-      needs.check_gcp_variables.outputs.gcp-variables-set == 'true' && (
-        (github.event_name == 'push' || github.event_name == 'schedule') ||
-        (github.event_name == 'workflow_dispatch' && github.event.inputs.runDataflow == 'true')
-      )
+      needs.check_gcp_variables.outputs.gcp-variables-set == 'true'
+#      TODO(BEAM-12104) Uncomment this, only for testing
+#      needs.check_gcp_variables.outputs.gcp-variables-set == 'true' && (
+#        (github.event_name == 'push' || github.event_name == 'schedule') ||
+#        (github.event_name == 'workflow_dispatch' && github.event.inputs.runDataflow == 'true')
+#      )
     strategy:
       fail-fast: false
       matrix:
-        # TODO(BEAM-12104): Use ubuntu-latest. Currently pinned to ubuntu 18.04
-        # because 20.04 switched the default JDK to 11.
-        os: [ubuntu-18.04, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -162,11 +162,20 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           export_default_credentials: true
+      - name: Set Java Version
+        uses: actions/setup-java@v1
+        with:
+          java-version: 8
+      - name: Remove default github maven configuration
+        # This step is a workaround to avoid a decryption issue of Beam's
+        # gradle-command-action plugin and github's provided maven
+        # settings.xml file
+        run: rm ~/.m2/settings.xml
       - name: Run WordCount
         uses: ./.github/actions/gradle-command-action
         with:
           arguments: -p examples/ integrationTest --tests org.apache.beam.examples.WordCountIT
-            -DintegrationTestPipelineOptions=["--runner=DataflowRunner","--project=${{ secrets.GCP_PROJECT_ID }}","--tempRoot=gs://${{ secrets.GCP_TESTING_BUCKET }}/tmp/"]
+            -DintegrationTestPipelineOptions=["--runner=DataflowRunner","--project=${{ secrets.GCP_PROJECT_ID }}","--tempRoot=gs://${{ secrets.GCP_TESTING_BUCKET }}/tmp/","--serviceAccount=${{ secrets.GCP_SA_EMAIL }}"]
             -DintegrationTestRunner=dataflow
       - name: Upload test logs
         uses: actions/upload-artifact@v2
