--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -142,11 +142,11 @@ jobs:
           path: sdks/python/pytest**.xml
       - name: "Python Unit Tests Status Report"
         if: always()
-        run: echo $jobstatus
+        run: echo $statusbasictestswindows
         env:
           jobstatus: ${{ job.status }}
-          statusbasictestsunix: steps.python_unit_tests-unix.outcome
-          statusbasictestswindows: steps.python_unit_tests-windows.outcome
+          statusbasictestsunix: ${{ steps.python_unit_tests-unix.outcome }}
+          statusbasictestswindows: ${{ steps.python_unit_tests-windows.outcome }}
 
   python_wordcount_direct_runner:
     name: 'Python Wordcount Direct Runner'
@@ -181,10 +181,10 @@ jobs:
         run: python -m apache_beam.examples.wordcount --input MANIFEST.in --output counts
       - name: "Python Word Count Direct Runner Status Report"
         if: always()
-        run: echo $jobstatus
+        run: echo $directrunnerstatus
         env:
           jobstatus: ${{ job.status }}
-          directrunnerstatus: steps.run_python_wordcount_direct_runner.outcome
+          directrunnerstatus: ${{ steps.run_python_wordcount_direct_runner.outcome }}
 
   python_wordcount_dataflow:
     name: 'Python Wordcount Dataflow'
@@ -241,7 +241,7 @@ jobs:
             --sdk_location ../../apache-beam-source/apache-beam-source.tar.gz
       - name: "Python Word Count Dataflow Status Report"
         if: always()
-        run: echo $jobstatus
+        run: echo $directrunnerstatus
         env:
           jobstatus: ${{ job.status }}
-          directrunnerstatus: steps.run_python_wordcount_dataflow.outcome
+          directrunnerstatus: ${{ steps.run_python_wordcount_dataflow.outcome }}
