[BEAM-37137] Add nosetest prefix for testing

--- a/runners/google-cloud-dataflow-java/build.gradle
+++ b/runners/google-cloud-dataflow-java/build.gradle
@@ -355,7 +355,8 @@ createCrossLanguageValidatesRunnerTask(
   pytestOptions: [
     "--capture=no",
     "--numprocesses=8",
-    "--timeout=4500"
+    "--timeout=4500",
+    "--log-cli-level=INFO",
   ]
 )
 
